vertx-mqtt-it/src/main/fabric8/mqtt-secured-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mqtt-secured-service
spec:
  ports:
  - name: mqtt
    port: 8883
    protocol: TCP
    targetPort: 8883
  selector:
    app:  ${project.artifactId}
