vertx-mqtt-it/src/main/fabric8/mqtt-route.yml
apiVersion: v1
kind: Route
metadata:
  name: mqtt-service-route
spec:
  port:
    targetPort: 1883
  to:
    kind: Service
    name: mqtt-service
