vertx-mqtt-it/src/main/fabric8/mqtt-secured-route.yml
apiVersion: v1
kind: Route
metadata:
  name: mqtt-secured-route
spec:
  port:
    targetPort: 8883
  to:
    kind: Service
    name: mqtt-secured-service
  tls:
    termination: passthrough
